# texture_to_vert_colors

./: .gitignore  Cargo.toml  makefile  pyproject.toml  readme.md
ablations/: .gitignore
examples/: bake_textures_to_vertex_colors.rs  bake_vertex_colors_to_textures.rs  check_scaling_tri_property.rs  color_shift.rs  copy_mesh_to_uv.rs  dither_image.rs  grad.rs  measure_flat.rs  ordered_dithering.rs  painterly.rs  relaxed_direction_field.rs  smooth_image.rs  texture_analogies.rs
src/: aabb.rs  clustering.rs  inv_map.rs  lib.rs  manifold.rs  measure_flat.rs  merge.rs  qem.rs  quadric.rs  svd.rs  sym.rs  union_find.rs  vec.rs  vector_field.rs  weighting.rs
