[package]
name = "texture_to_vert_colors"
version = "0.1.0"
edition = "2024"
default-run = "texture_to_vert_colors"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
#pars3d = { git = "https://github.com/JulianKnodt/pars3d", version = "0.1.0", features = ["f64"] }
smallvec = "1.15.0"
priority-queue = "2.3.1"
ordered-float = "5.0.0"
indicatif = "0.17.11"
pars3d = { path = "../pars3d", features = ["f64", "svg"] }
least_sq = { git="https://github.com/JulianKnodt/qr_lst_sq.git", features = ["f64"] }
#union-find = { git = "https://github.com/JulianKnodt/union-find.git", version = "0.1.0" }
union-find = { path = "../union-find", features = ["unchecked"] }
rayon = { version= "1.10.0", optional = true }
serde = "1.0.219"
sparse_lu = { path = "../sparse_lu", features = ["f64"] }

[features]
default = ["rayon"]

#[profile.release]
#debug = 1
