[project]
name = "texture-to-vert-colors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "pillow>=11.2.1",
    "robust-laplacian>=1.0.0",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.10",
    "xatlas>=0.0.10",
    "bpy>=4.0.0",
    "blendertoolbox>=0.0.5",
    "libigl>=2.6.1",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
    "pandas>=2.3.0",
    "scienceplots>=2.1.1",
    "potpourri3d>=1.2.2",
]
